tests/valid/global_variables/multiple_global.rs
/*
return: 12
*/

a: i64 = 3;
b: i64 = 4;

main(): i32 {
    return a * b;
}